# Desktop

./: README.md
ImageImp/: CMakeLists.txt  Doxyfile  compile.sh  imageimp.pro  todo
ImageImp/client/: CMakeLists.txt  cli_options.cpp  cli_options.h  client.pro  imageimp.rc  main.cpp
ImageImp/config/: CMakeLists.txt  config.pro  config.qrc  config.rc  config.ui  main.cpp  mainwindow.cpp  mainwindow.h
ImageImp/data/templates/album/: template-001.psd
ImageImp/data/templates/picture/: template-001.psd
ImageImp/dbcleaner/: CMakeLists.txt  cleaning.ui  dbcleaner.pro  main.cpp  mainwindow.cpp  mainwindow.h
ImageImp/doc/: devel.txt  style.txt  templates.odt
ImageImp/document/: CMakeLists.txt  document.cpp  document.h  document.pro  readme.txt
ImageImp/imp/: CMakeLists.txt  album.cpp  album.h  const.h  group.cpp  group.h  imp.pro  person.cpp  person.h  photodate.cpp  photodate.h  picture.cpp  picture.h  template.cpp  template.h
ImageImp/imp/tests/: CMakeLists.txt  test_imp.cpp  test_imp.h
ImageImp/imp/tests/disabled/: test_libimp.cpp  test_libimp.h
ImageImp/model/: CMakeLists.txt  albums.cpp  albums.h  groups.cpp  groups.h  model.pro  people.cpp  people.h  people_with_photos.cpp  people_with_photos.h  people_with_photos_query.cpp  people_with_photos_query.h  photo_import.cpp  photo_import.h  photo_selection.cpp  photo_selection.h  photodates.cpp  photodates.h  photos.cpp  photos.h  templates.cpp  templates.h
ImageImp/model/tests/: CMakeLists.txt  test_model.cpp  test_model.h
ImageImp/model_proxies/: CMakeLists.txt  model_proxies.pro  photographed_people.cpp  photographed_people.h  unphotographed_people.cpp  unphotographed_people.h
ImageImp/processor/: CMakeLists.txt  clean_db.cpp  clean_db.h  create_album.cpp  create_album.h  processor.pro
ImageImp/resources/: CMakeLists.txt  imageimp.css  imageimp.qrc  imageimp.sql  import.jsx  import.vbs  picture-template-001.psd  picture-template.psd  readme.txt  resources.pro
ImageImp/settings/: CMakeLists.txt  config.cpp  config.h  export.cpp  export.h  settings.pro  startup.cpp  startup.h  system.cpp  system.h
ImageImp/storage/: CMakeLists.txt  get.cpp  get.h  query.cpp  query.h  readme.txt  set.cpp  set.h  storage.pro
ImageImp/tools/: tools.pro
ImageImp/widgets/: CMakeLists.txt  actions.cpp  albums_view.cpp  albums_view.h  groups_view.cpp  groups_view.h  imageimp.ui  imageimp_en.ts  imageimp_he.ts  mainwindow.cpp  mainwindow.h  people_view.cpp  people_view.h  photodates_view.cpp  photodates_view.h  photos_import_view.cpp  photos_import_view.h  photos_selection_view.cpp  photos_selection_view.h  search_editors.cpp  sections.cpp  settings.cpp  tables.cpp  templates_view.cpp  templates_view.h  translations.h  widgets.pro
PdfLoader/: PdfLoader.pro
PdfLoader/backup/: mainwindow.ui
PdfLoader/data/: example1.txt  pdf-footer.txt  pdf-header.txt
PdfLoader/explorer/: explorer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PdfLoader/extractor/: main.cpp
PdfLoader/graphics/: conversion.cpp  conversion.h  graphics.pro  parser.cpp  parser.h  segment_parsers.cpp  segment_parsers.h  textnode.cpp  textnode.h  validators.cpp  validators.h
PdfLoader/objects/: dictionary.cpp  dictionary.h  objects.pro
PdfLoader/pdf/: inflate.cpp  inflate.h  objectpropertymodel.cpp  objectpropertymodel.h  page.cpp  page.h  pdf.pro  pdfcommandsmodel.cpp  pdfcommandsmodel.h  pdfdocument.cpp  pdfdocument.h  pdfgenerator.cpp  pdfgenerator.h  pdfobjectsmodel.cpp  pdfobjectsmodel.h  pdfparser.cpp  pdfparser.h  pdfscene.cpp  pdfscene.h  settings.cpp  settings.h  streamextractor.cpp  streamextractor.h  textnode.h  util.cpp  util.h
PdfLoader/widgets/: pdfcommandsview.cpp  pdfcommandsview.h  widgets.pro
WRsync/: BUILD.txt  TODO.txt  WRSync.pod  WRsync.pro  common.pri  install.pri  jblib.pri  wrsync.odt
WRsync/block-client/: block-client.pro
WRsync/client/: client.pro  client.rc  exitcodes.h  main.cpp  options.cpp  options.h  processor.cpp  processor.h  report.cpp  report.h
WRsync/cron/: cron.pro  main.cpp
WRsync/logger/: logger.pro  main.cpp  report.cpp  report.h
WRsync/logtail/: logtail.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
WRsync/logview/: calendarlogmodel.cpp  calendarlogmodel.h  copyerrorsmodel.cpp  copyerrorsmodel.h  jobstatemodel.cpp  jobstatemodel.h  logdaydelegate.cpp  logdaydelegate.h  logview.pro  logview.rc  logview_en.ts  logview_he.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.cpp  messages.h
WRsync/monitor/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor.cpp  monitor.h  monitor.pro  monitor.rc  monitorview.cpp  monitorview.h  monitorview.ui  trayicon.cpp  trayicon.h
WRsync/notifier/: main.cpp  notifier.cpp  notifier.h  notifier.pro  notifier.ui
WRsync/plugins/: install.pri  plugins.pri  plugins.pro
WRsync/reporter/: reporter.pro
WRsync/resources/: install.vbs  uninstall.vbs  wrsync.qrc
WRsync/settings/: backupjobsmodel.cpp  backupjobsmodel.h  dailyschedulemodel.cpp  dailyschedulemodel.h  dailyscheduleview.cpp  main.cpp  (+26 more)
automate/: AUTHORS  Doxyfile  INSTALL  README  TODO  auto-mate.ini  auto-mate.pro
fontmate/: Doxyfile  TODO  common.pri  fontmate.kdevelop  fontmate.kdevelop.pcs  fontmate.kdevses  fontmate.pro  fontmate.pro.user.1.3  staticlibs.pri
imageprep/: collectionnamedialog.cpp  collectionnamedialog.h  collectionnamedialog.ui  collectiontools.cpp  collectiontools.h  cropareaitem.cpp  cropareaitem.h  document.cpp  document.h  imageeditorscene.cpp  imageeditorscene.h  imageeditorview.cpp  imageeditorview.h  imageprep.pro  imageprep.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  target.cpp  target.h  targetbutton.cpp  targetbutton.h  targetremovedialog.cpp  targetremovedialog.h  targetremovedialog.ui  translation.cpp  translation.h  uploaddialog.cpp  uploaddialog.h  uploaddialog.ui
minisfv/: Doxyfile  INSTALL  minisfv.pro  minisfv.qrc
minitimer/: Doxyfile  minitimer.pro  todo.txt
(+466 files in other folders)
